--- a/extractionproduction.html
+++ b/extractionproduction.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extracción y Producción de Minerales</title>
-    <link rel="stylesheet" href="/css/css.css">
+    <title>Soluciones de Extracción y Producción Minera | ROC'S</title>
+    <!-- <link rel="stylesheet" href="/css/css.css"> -->
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/extraction.css">
 </head>
 
 <header>
@@ -21,8 +23,8 @@
         </button>
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html" class="active">Inicio</a></li>
-                <li><a href="/extractionproduction.html">Extracción</a></li>
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/extractionproduction.html" class="active">Extracción</a></li>
                 <li><a href="/procesamiento.html">Procesamiento de Minerales</a></li>
                 <li><a href="/logistic.html">Logística y Transporte</a></li>
                 <li><a href="/minerals.html">Comercialización y Venta de Minerales</a></li>
@@ -34,98 +36,249 @@
 <body>
     <section class="hero hero-extraction">
         <div class="hero-content">
-            <h1>Extracción y Producción de Minerales</h1>
-            <p></p>
+            <h1>Soluciones de Extracción y Producción Minera</h1>
+            <p>Tecnología de vanguardia y experiencia confiable para optimizar sus operaciones</p>
         </div>
     </section>
 
     <main>
+        <!-- Sección de Introducción Empresarial -->
         <section class="about-section">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Conoce los métodos más utilizados en la industria minera.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque leo a libero
-                        tincidunt,
-                        vitae aliquet nisl tincidunt. Sed euismod, nisl nec aliquam aliquam, nunc nisl aliquet nisl,
-                        eget
-                        aliquam nisl nisl sit amet lorem.Ea occaecat minim sunt incididunt sunt qui non pariatur
-                        cupidatat
-                        dolor consectetur est officia. Laborum proident labore labore commodo laborum Lorem enim cillum
-                        irure in nulla Lorem ullamco irure. Mollit sint minim ad labore ex velit voluptate veniam minim
-                        id.
-                        Qui elit occaecat sint labore mollit exercitation. Deserunt deserunt exercitation minim aliqua
-                        et
-                        duis. Labore consectetur excepteur voluptate consequat nisi voluptate ea mollit elit proident
-                        dolor
-                        Lorem laborum.</p>
+                    <h2>Optimice su producción con nuestras soluciones integrales</h2>
+                    <p>En <strong>ROC'S Servicios Mineros</strong>, ofrecemos servicios especializados de extracción y producción minera que maximizan el rendimiento y minimizan los costos operativos. Con más de 10 años de experiencia en la industria, hemos desarrollado metodologías innovadoras que garantizan la eficiencia, seguridad y sostenibilidad en cada proyecto.</p>
+                    <p>Nuestro equipo de ingenieros y especialistas trabaja con usted para implementar las soluciones más adecuadas según las características específicas de su yacimiento, cumpliendo siempre con los más altos estándares de la industria y regulaciones ambientales.</p>
                 </div>
             </div>
         </section>
-        <!-- Método 1: Minado Superficial -->
+
+        <!-- Solución 1: Minado Superficial -->
         <section class="about-content">
             <div class="about-text">
-                <h2>1. Minado Superficial</h2>
-                <p>Excavación a cielo abierto empleada para la extracción de minerales metálicos y no metálicos de
-                    cuerpos minerales localizados a profundidades menores de 160m (500 pies aprox.).</p>
+                <h2>Soluciones de Minado Superficial</h2>
+                <p>Nuestras técnicas avanzadas de minado superficial están diseñadas para maximizar la recuperación de minerales optimizando costos operativos. Implementamos tecnología de punta y metodologías probadas para garantizar operaciones eficientes y seguras.</p>
+                <h3>Beneficios de nuestras soluciones:</h3>
                 <ul>
-                    <li>Minado de placeres</li>
-                    <li>Minado hidráulico</li>
-                    <li>Minado a Tajo abierto</li>
-                    <li>Explotación de canteras</li>
-                    <li>Glory Hole</li>
+                    <li>Reducción de hasta 30% en costos operativos</li>
+                    <li>Optimización de la planificación y diseño de minas</li>
+                    <li>Sistemas de control y monitoreo en tiempo real</li>
+                    <li>Cumplimiento integral de normativas ambientales</li>
+                    <li>Incremento en la productividad y recuperación de minerales</li>
                 </ul>
+                <div class="cta-button">
+                    <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20soluciones%20de%20minado%20superficial" target="_blank">Solicitar consultoría personalizada</a>
+                </div>
             </div>
             <div class="about-image">
-                <img src="/img/pr3.jpg" alt="Minado Superficial">
+                <img src="/img/pr3.jpg" alt="Soluciones de Minado Superficial">
             </div>
         </section>
 
-        <!-- Método 2: Minado Subterráneo -->
+        <!-- Solución 2: Minado Subterráneo -->
         <section class="about-content">
             <div class="about-image">
-                <img src="/img/cave3.jpg" alt="Minado Subterráneo">
+                <img src="/img/cave3.jpg" alt="Soluciones de Minado Subterráneo">
             </div>
             <div class="about-text">
-                <h2>2. Minado Subterráneo</h2>
-                <p>Explotación de recursos mineros que se desarrolla por debajo de la superficie del terreno. Para la
-                    selección de este método se deben considerar varios factores como resistencia del mineral y de la
-                    roca encajonante.</p>
+                <h2>Excelencia en Minado Subterráneo</h2>
+                <p>Nuestra experiencia en operaciones subterráneas nos permite ofrecer soluciones especializadas que maximizan la seguridad y eficiencia en entornos complejos. Utilizamos tecnología de vanguardia y metodologías innovadoras adaptadas a las condiciones específicas de cada proyecto.</p>
+                <h3>Nuestras soluciones incluyen:</h3>
                 <ul>
-                    <li>Rebajes naturalmente soportados</li>
-                    <li>Rebajes artificialmente soportados</li>
-                    <li>Rebajes de hundimiento</li>
+                    <li>Sistemas avanzados de soporte y estabilización</li>
+                    <li>Métodos optimizados de extracción para diferentes tipos de yacimientos</li>
+                    <li>Tecnología de ventilación y control ambiental</li>
+                    <li>Automatización de procesos clave para mayor seguridad</li>
+                    <li>Ingeniería geotécnica especializada</li>
                 </ul>
+                <div class="cta-button">
+                    <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20soluciones%20de%20minado%20subterráneo" target="_blank">Descubra nuestras soluciones</a>
+                </div>
             </div>
-
         </section>
 
-        <!-- Método 3: Métodos Especiales -->
+        <!-- Solución 3: Métodos Especiales -->
         <section class="about-content">
             <div class="about-text">
-                <h2>3. Métodos Especiales</h2>
-                <p>Sistemas que emplean técnicas de disolución de los valores contenidos en el yacimiento, no es
-                    necesario penetrar físicamente en el yacimiento para la extracción.</p>
+                <h2>Tecnologías Especializadas de Extracción</h2>
+                <p>Implementamos métodos innovadores y especializados que permiten extraer eficientemente minerales en condiciones específicas donde los métodos convencionales no son óptimos. Estas soluciones ofrecen ventajas significativas en términos de impacto ambiental, eficiencia y costos.</p>
+                <h3>Soluciones destacadas:</h3>
                 <ul>
-                    <li>Proceso Frasch</li>
-                    <li>Disolución con agua caliente</li>
-                    <li>Lixiviación</li>
+                    <li>Sistemas avanzados de lixiviación in situ</li>
+                    <li>Procesos optimizados de disolución selectiva</li>
+                    <li>Tecnologías de minería de soluciones de baja huella ambiental</li>
+                    <li>Métodos integrados de recuperación y procesamiento</li>
+                    <li>Soluciones personalizadas para yacimientos complejos</li>
                 </ul>
+                <div class="cta-button">
+                    <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20conocer%20sus%20tecnologías%20especializadas%20de%20extracción" target="_blank">Consultar opciones tecnológicas</a>
+                </div>
             </div>
             <div class="about-image">
-                <img src="/img/livix.jpg" alt="Métodos Especiales">
+                <img src="/img/livix.jpg" alt="Tecnologías Especializadas">
+            </div>
+        </section>
+
+        <!-- Casos de Éxito -->
+        <section class="case-studies-section">
+            <div class="container">
+                <h2>Casos de Éxito</h2>
+                <div class="case-studies-grid">
+                    <div class="case-study-card">
+                        <div class="case-study-image">
+                            <img src="/img/sierra.jpg" alt="Proyecto Minero en Sierra Alta">
+                        </div>
+                        <div class="case-study-content">
+                            <h3>Proyecto Minero en Sierra Alta</h3>
+                            <p><strong>Resultados:</strong> Incremento del 45% en la producción anual mediante la implementación de nuestras soluciones de minado a tajo abierto y optimización de la flota de equipos.</p>
+                        </div>
+                    </div>
+                    <div class="case-study-card">
+                        <div class="case-study-image">
+                            <img src="/img/minasub.avif" alt="Operación Subterránea Mina Esperanza">
+                        </div>
+                        <div class="case-study-content">
+                            <h3>Operación Subterránea Mina Esperanza</h3>
+                            <p><strong>Resultados:</strong> Reducción del 35% en costos operativos y mejora en la seguridad con cero accidentes incapacitantes durante 3 años consecutivos.</p>
+                        </div>
+                    </div>
+                    <div class="case-study-card">
+                        <div class="case-study-image">
+                            <img src="/img/livixacion.jpeg" alt="Proyecto de Recuperación Innovadora">
+                        </div>
+                        <div class="case-study-content">
+                            <h3>Proyecto de Recuperación Innovadora</h3>
+                            <p><strong>Resultados:</strong> Implementación exitosa de técnicas de lixiviación especializadas que permitieron recuperar más de 12.000 toneladas de mineral de baja ley con impacto ambiental mínimo.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Nuestro Enfoque -->
+        <section class="approach-section">
+            <div class="container">
+                <h2>Nuestro Enfoque</h2>
+                <div class="approach-content">
+                    <div class="approach-item">
+                        <div class="approach-icon">
+                            <img src="/img/assets/analysis.png" alt="Análisis y Planificación">
+                        </div>
+                        <h3>Análisis y Planificación</h3>
+                        <p>Evaluamos detalladamente las características de su yacimiento y necesidades específicas para diseñar la solución óptima.</p>
+                    </div>
+                    <div class="approach-item">
+                        <div class="approach-icon">
+                            <img src="/img/assets/implementation.png" alt="Implementación Tecnológica">
+                        </div>
+                        <h3>Implementación Tecnológica</h3>
+                        <p>Aplicamos las tecnologías más avanzadas adaptadas a su proyecto, garantizando eficiencia y resultados medibles.</p>
+                    </div>
+                    <div class="approach-item">
+                        <div class="approach-icon">
+                            <img src="/img/assets/optimization.png" alt="Optimización Continua">
+                        </div>
+                        <h3>Optimización Continua</h3>
+                        <p>Monitoreamos y ajustamos constantemente nuestras soluciones para maximizar el rendimiento y adaptarnos a condiciones cambiantes.</p>
+                    </div>
+                    <div class="approach-item">
+                        <div class="approach-icon">
+                            <img src="/img/assets/support.png" alt="Soporte Especializado">
+                        </div>
+                        <h3>Soporte Especializado</h3>
+                        <p>Ofrecemos acompañamiento técnico y formación para su equipo, asegurando la transferencia de conocimiento y la continuidad operativa.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contacto WhatsApp Business -->
+        <section class="contact-section" id="contact-form">
+            <div class="container">
+                <h2>¿Listo para optimizar sus operaciones mineras?</h2>
+                <p class="contact-intro">Nuestros especialistas están disponibles para analizar su proyecto y ofrecerle soluciones personalizadas. Contáctenos directamente a través de WhatsApp Business para una respuesta inmediata.</p>
+                <div class="whatsapp-contact-container">
+                    <div class="whatsapp-benefits">
+                        <div class="benefit-item">
+                            <div class="benefit-icon">
+                                <img src="/img/assets/clock.png" alt="Respuesta Rápida">
+                            </div>
+                            <h3>Respuesta Inmediata</h3>
+                            <p>Nuestro equipo de especialistas responderá a su consulta en menos de 30 minutos en horario laboral.</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">
+                                <img src="/img/assets/document.png" alt="Envío de Documentación">
+                            </div>
+                            <h3>Envío de Documentación</h3>
+                            <p>Comparta fácilmente planos, fotografías o documentos técnicos de su proyecto para una evaluación precisa.</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">
+                                <img src="/img/assets/personalized.png" alt="Atención Personalizada">
+                            </div>
+                            <h3>Atención Personalizada</h3>
+                            <p>Comunicación directa con nuestros ingenieros especializados según el tipo de proyecto que necesite.</p>
+                        </div>
+                    </div>
+                    
+                    <div class="whatsapp-cta">
+                        <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20servicios%20de%20extracción%20minera." class="whatsapp-button">
+                            <img src="/img/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
+                            <span>Contáctenos vía WhatsApp</span>
+                        </a>
+                        <p class="contact-note">También puede comunicarse directamente a: <strong>+123 456 7890</strong></p>
+                        <p class="business-hours">Horario de atención: Lunes a Viernes de 8:00 a 18:00 hrs</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Certificaciones -->
+        <section class="certifications-section">
+            <div class="container">
+                <h2>Nuestras Certificaciones</h2>
+                <p>Cumplimos con los más altos estándares de la industria</p>
+                <div class="certifications-grid">
+                    <div class="certification-item">
+                        <img src="/img/logos/iso9001.svg" alt="ISO 9001">
+                        <p>ISO 9001</p>
+                    </div>
+                    <div class="certification-item">
+                        <img src="/img/logos/iso14001.png" alt="ISO 14001">
+                        <p>ISO 14001</p>
+                    </div>
+                    <div class="certification-item">
+                        <img src="/img/logos/ISO-45001.png" alt="ISO 45001">
+                        <p>ISO 45001</p>
+                    </div>
+                    <div class="certification-item">
+                        <img src="/img/logos/irma.webp" alt="Certificación Industria Minera">
+                        <p>Certificación Industria Minera</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 
     <!-- Footer para el sitio web -->
     <footer>
-        <ul class="social-icons">
-            <li><a href="#" target="_blank"><img src="/img/facebook.png" alt="Facebook"></a></li>
-            <li><a href="#" target="_blank"><img src="/img/instagram.png" alt="Instagram"></a></li>
-            <li><a href="#" target="_blank"><img src="/img/whatsapp.png" alt="WhatsApp"></a></li>
-        </ul>
+        <div class="footer-logo">
+            <img src="/img/Logo.png" alt="ROC'S Servicios Mineros" class="logo">
+        </div>
+        <div class="social-icons">
+            <a href="#" target="_blank"><img src="/img/social/fb.png" alt="Facebook"></a>
+            <a href="#" target="_blank"><img src="/img/social/ig.png" alt="Instagram"></a>
+            <a href="#" target="_blank"><img src="/img/social/whats.png" alt="WhatsApp"></a>
+        </div>
+        <div class="copyright">
+            © ROC'S Servicios Mineros 2025. Todos los derechos reservados.
+        </div>
     </footer>
     <script src="/js/navbar.js"></script>
+    <style>
+   
+    </style>
 
 </body>
 
