--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROC'S Servicios Mineros</title>
+    <link rel="icon" href="/img/logo2.png" type="image/x-icon">
     <!-- <link rel="stylesheet" href="/css/css.css"> -->
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/index.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <header>
@@ -338,7 +339,7 @@
             </div>
 
             <div class="featured-image">
-                <img src="/img/tunnel.webp" alt="Operaciones Mineras">
+                <img src="/img/view1.jpg" alt="Operaciones Mineras">
                 <div class="featured-content">
                     <h3 class="featured-title">Innovación y tecnología al servicio de la minería</h3>
                     <p class="featured-description">
@@ -500,86 +501,156 @@
     <!-- Sección de Contacto -->
     <section class="contact-section" id="contact">
         <div class="contact-container">
-             <div class="section-header"  >
+            <div class="section-header">
                 <div class="section-label">Contacto</div>
-                <h5 class="section-title">¿Listo para optimizar sus operaciones?</h5>
+                <h2 class="section-title">¿Listo para optimizar sus operaciones?</h2>
                 <p class="section-text">
-                    Nuestro equipo de expertos está preparado para analizar sus necesidades y ofrecerle la mejor solución para su proyecto minero.
+                    Nuestro equipo de expertos está preparado para analizar sus necesidades y ofrecerle la mejor
+                    solución para su proyecto minero.
                 </p>
             </div>
             <div class="divider"></div> <!-- Línea divisora -->
 
-            <!-- Mapa -->
-            <div class="contact-map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354345093747!2d-122.3898746846816!3d37.77492977975938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085807f5b0f0b9f%3A0x8a5a9d6b8b8b8b8b!2s500%20Terry%20Francine%20St%2C%20San%20Francisco%2C%20CA%2094158%2C%20USA!5e0!3m2!1sen!2sus!4v1635095300000!5m2!1sen!2sus"
-                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
-                </iframe>
+            <!-- Carrusel horizontal de opciones de contacto -->
+            <div class="contact-cards-scroll" style="padding: 30px;">
+                <!-- Tarjeta WhatsApp -->
+                <div class="contact-card whatsapp-card">
+                    <div class="card-inner">
+                        <div class="card-header">
+                            <div class="card-icon whatsapp-icon">
+                                <i class="fab fa-whatsapp text-white text-2xl"></i>
+                            </div>
+                            <div class="card-title">
+                                <h3>Chat en WhatsApp</h3>
+                                <p>Respuesta inmediata</p>
+                            </div>
+                        </div>
+                        <div class="card-features">
+                            <div class="feature">
+                                <div class="feature-icon">
+                                    <i class="fas fa-bolt"></i>
+                                </div>
+                                <span>Rápido</span>
+                            </div>
+                            <div class="feature">
+                                <div class="feature-icon">
+                                    <i class="fas fa-lock"></i>
+                                </div>
+                                <span>Seguro</span>
+                            </div>
+                        </div>
+                        <div class="card-contact-info">
+                            <div>
+                                <p class="info-label">Número principal</p>
+                                <p class="info-value">+123 456 7890</p>
+                            </div>
+                            <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20servicios%20mineros"
+                                class="card-action-btn whatsapp-btn">
+                                Iniciar chat
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta Ubicación -->
+                <div class="contact-card location-card">
+                    <div class="card-inner">
+                        <div class="card-header">
+                            <div class="card-icon location-icon">
+                                <i class="fas fa-map-marker-alt text-white"></i>
+                            </div>
+                            <div class="card-title">
+                                <h3>Nuestra ubicación</h3>
+                                <p>Visítanos</p>
+                            </div>
+                        </div>
+                        <div class="card-map">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354345093747!2d-122.3898746846816!3d37.77492977975938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085807f5b0f0b9f%3A0x8a5a9d6b8b8b8b8b!2s500%20Terry%20Francine%20St%2C%20San%20Francisco%2C%20CA%2094158%2C%20USA!5e0!3m2!1sen!2sus!4v1635095300000!5m2!1sen!2sus"
+                                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                        <div class="location-details">
+                            <div class="detail-item">
+                                <i class="fas fa-building"></i>
+                                <span>500 Terry Francine Street, San Francisco, CA 94158</span>
+                            </div>
+                            <div class="detail-item">
+                                <i class="fas fa-clock"></i>
+                                <span>Lun-Vie: 8AM-6PM</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta Contacto -->
+                <div class="contact-card other-contact-card">
+                    <div class="card-inner">
+                        <div class="card-header">
+                            <div class="card-icon contact-icon">
+                                <i class="fas fa-envelope text-white"></i>
+                            </div>
+                            <div class="card-title">
+                                <h3>Otras formas</h3>
+                                <p>Múltiples opciones</p>
+                            </div>
+                        </div>
+                        <div class="other-contacts">
+                            <div class="contact-method">
+                                <div class="method-icon phone-icon">
+                                    <i class="fas fa-phone-alt"></i>
+                                </div>
+                                <div class="method-info">
+                                    <p class="method-label">Teléfono</p>
+                                    <p class="method-value">+123 456 7890</p>
+                                </div>
+                            </div>
+                            <div class="contact-method">
+                                <div class="method-icon email-icon">
+                                    <i class="fas fa-envelope"></i>
+                                </div>
+                                <div class="method-info">
+                                    <p class="method-label">Email</p>
+                                    <p class="method-value">info@rocsmineria.com</p>
+                                </div>
+                            </div>
+                            <div class="contact-method">
+                                <div class="method-icon chat-icon">
+                                    <i class="fas fa-comments"></i>
+                                </div>
+                                <div class="method-info">
+                                    <p class="method-label">Horario de atención</p>
+                                    <p class="method-value">Lunes a Viernes: 8:00 - 18:00</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <!-- Información de Contacto -->
-            <div class="contact-info">
-                <div class="contact-details">
-                    <h3>Lorem ipsum dolor sit</h3>
-                    <p>Cupidatat culpa commodo amet Lorem sit voluptate consectetur labore proident culpa cillum nulla.
-                        <strong>123-456-7890</strong> Excepteur fugiat anim non consectetur eu enim ullamco proident
-                        tempor voluptate exercitation labore cupidatat.
-                    </p>
+            <!-- Sección de preguntas frecuentes -->
+            <div class="faq-section">
+                <h2>Preguntas frecuentes</h2>
+                <div class="faq-grid">
+                    <div class="faq-item faq-item-1">
+                        <h3>¿Cómo puedo solicitar una cotización?</h3>
+                        <p>Puede contactarnos directamente por WhatsApp, teléfono o correo electrónico. Nuestro equipo
+                            le responderá con una cotización personalizada en menos de 24 horas.</p>
+                    </div>
+                    <div class="faq-item faq-item-2">
+                        <h3>¿Qué información necesitan para un proyecto?</h3>
+                        <p>Es útil tener detalles sobre el tipo de mineral, volumen de producción esperado, ubicación y
+                            plazos del proyecto. Pero no se preocupe, nuestros especialistas le guiarán durante el
+                            proceso.</p>
+                    </div>
+                    <div class="faq-item faq-item-3">
+                        <h3>¿Trabajan en proyectos internacionales?</h3>
+                        <p>Sí, tenemos experiencia en proyectos mineros en diversos países de Latinoamérica y podemos
+                            adaptar nuestras soluciones a diferentes normativas y condiciones.</p>
+                    </div>
                 </div>
-
-                <!-- Formulario de Contacto -->
-                <form class="contact-form">
-                    <div class="form-group">
-                        <label for="first-name">First Name *</label>
-                        <input type="text" id="first-name" name="first-name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="last-name">Last Name *</label>
-                        <input type="text" id="last-name" name="last-name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email *</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject">Subject</label>
-                        <input type="text" id="subject" name="subject">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="5"></textarea>
-                    </div>
-                    <button type="submit">Submit</button>
-                </form>
-
-                <!-- Información de la Oficina Principal -->
-                <div class="office-info">
-                    <h3>Head Office</h3>
-                    <p>500 Terry Francine Street</p>
-                    <p>San Francisco, CA 94158</p>
-                    <p>Email: <a href="mailto:info@mysite.com">info@mysite.com</a></p>
-                    <p>Tel: 123-456-7890</p>
-                    <p>Fax: 123-456-7890</p>
-                </div>
-
-                <!-- Información de Empleo -->
-                <div class="employment-info">
-                    <h3>Employment</h3>
-                    <p>To apply for a job with Sphere Constructions, please send a cover letter together with your C.V.
-                        to: <a href="mailto:info@mysite.com">info@mysite.com</a>.</p>
-                </div>
-            </div>
-
-            <!-- Línea divisora -->
-            <div class="divider"></div>
-
-            <!-- Obtener una cotización -->
-            <div class="quote-info">
-                <h3>Get a quote: <strong>123-456-7890</strong></h3>
             </div>
         </div>
     </section>
-    
     <!-- Footer -->
     <footer class="footer">
         <!-- Logo -->
