--- a/minerals.html
+++ b/minerals.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Minerales | ROC'S Servicios Mineros</title>
+    <link rel="icon" href="/img/logo2.png" type="image/x-icon">
     <!-- <link rel="stylesheet" href="/css/css.css"> -->
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/minerals.css">
@@ -24,9 +25,9 @@
             <ul>
                 <li><a href="/index.html">Inicio</a></li>
                 <li><a href="/extractionproduction.html">Extracción</a></li>
-                <li><a href="/procesamiento.html">Procesamiento</a></li>
-                <li><a href="/logistic.html">Logística</a></li>
-                <li><a href="/minerals.html" class="active">Productos</a></li>
+                <li><a href="/procesamiento.html">Procesamiento de Minerales</a></li>
+                <li><a href="/logistic.html">Logística y Transporte</a></li>
+                <li><a href="/minerals.html" class="active">Comercialización y Venta de Minerales</a></li>
             </ul>
         </nav>
     </div>
@@ -247,20 +248,20 @@
 
     <section class="certifications">
         <div class="certification-item">
-            <img src="/img/icons/iso.png" alt="ISO Certified" class="certification-icon">
+            <img src="/img/logos/iso9001.svg" alt="ISO Certified" class="certification-icon">
             <span class="certification-text">ISO 9001:2015</span>
         </div>
         <div class="certification-item">
-            <img src="/img/icons/lme.png" alt="LME Registered" class="certification-icon">
-            <span class="certification-text">LME Registered Brand</span>
+            <img src="/img/logos/profepa.jpg" alt="Industria Limpia" class="certification-icon">
+            <span class="certification-text">Industria Limpia</span>
         </div>
         <div class="certification-item">
-            <img src="/img/icons/sustainable.png" alt="Sustainable Mining" class="certification-icon">
-            <span class="certification-text">Minería Responsable</span>
+            <img src="/img/logos/irma.webp" alt="Iniciativa para la Garantía de Minería Responsable" class="certification-icon">
+            <span class="certification-text">Iniciativa para la Garantía de Minería Responsable </span>
         </div>
         <div class="certification-item">
-            <img src="/img/icons/quality.png" alt="Quality Assured" class="certification-icon">
-            <span class="certification-text">Control de Calidad</span>
+            <img src="/img/logos/fairmined.svg" alt="Quality Assured" class="certification-icon">
+            <span class="certification-text">Certificación Fairmined</span>
         </div>
     </section>
 
@@ -272,9 +273,7 @@
                     expectativas. La consistencia del producto nos ha permitido optimizar nuestros procesos de
                     fabricación, resultando en productos finales de mayor calidad y menor tasa de defectos."</p>
                 <div class="testimonial-author">
-                    <div class="author-image">
-                        <img src="/img/testimonials/client1.jpg" alt="Carlos Mendoza">
-                    </div>
+                    <div class="author-avatar">CM</div>
                     <div class="author-info">
                         <h4>Carlos Mendoza</h4>
                         <p class="author-company">Director de Compras, ElectroComp S.A.</p>
@@ -287,9 +286,7 @@
                     certificaciones que respaldan su pureza, permitiéndonos mantener nuestros estándares de excelencia."
                 </p>
                 <div class="testimonial-author">
-                    <div class="author-image">
-                        <img src="/img/testimonials/client2.jpg" alt="Luisa Ramírez">
-                    </div>
+                    <div class="author-avatar">LR</div>
                     <div class="author-info">
                         <h4>Luisa Ramírez</h4>
                         <p class="author-company">CEO, Joyería Platinum</p>
@@ -301,9 +298,8 @@
                     su flexibilidad para adaptarse a nuestras necesidades cambiantes. Su zinc de alta pureza ha sido
                     fundamental para mejorar la durabilidad de nuestros productos galvanizados."</p>
                 <div class="testimonial-author">
-                    <div class="author-image">
-                        <img src="/img/testimonials/client3.jpg" alt="Miguel Torres">
-                    </div>
+                    <div class="author-avatar">MT</div>
+
                     <div class="author-info">
                         <h4>Miguel Torres</h4>
                         <p class="author-company">Gerente de Operaciones, Galvamet Industrial</p>
@@ -326,17 +322,68 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="footer">
+        <!-- Logo -->
         <div class="footer-logo">
-            <img src="/img/Logo.png" alt="ROC'S Servicios Mineros" class="logo">
+            <img src="/img/Logo.png" alt="Logo" class="logo">
         </div>
+
+        <!-- Iconos de Redes Sociales -->
         <div class="social-icons">
-            <a href="#" target="_blank"><img src="/img/social/fb.png" alt="Facebook"></a>
-            <a href="#" target="_blank"><img src="/img/social/ig.png" alt="Instagram"></a>
-            <a href="#" target="_blank"><img src="/img/social/whats.png" alt="WhatsApp"></a>
+            <a href="http://www.twitter.com/" target="_blank" aria-label="Twitter">
+                <svg class="icon" viewBox="0 0 24 24">
+                    <path
+                        d="M24 4.557a9.83 9.83 0 01-2.828.775 4.932 4.932 0 002.165-2.724 9.864 9.864 0 01-3.127 1.195 4.916 4.916 0 00-8.384 4.482A13.948 13.948 0 011.671 3.149a4.908 4.908 0 001.523 6.574 4.904 4.904 0 01-2.229-.616v.061a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.934 4.934 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.925 13.925 0 007.547 2.209c9.054 0 14.001-7.496 14.001-14 0-.213-.005-.426-.015-.637A10.025 10.025 0 0024 4.557z">
+                    </path>
+                </svg>
+            </a>
+            <a href="http://www.linkedin.com/" target="_blank" aria-label="LinkedIn">
+                <svg class="icon" viewBox="0 0 24 24">
+                    <path
+                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
+                    </path>
+                </svg>
+            </a>
+            <a href="http://www.facebook.com/" target="_blank" aria-label="Facebook">
+                <svg class="icon" viewBox="0 0 24 24">
+                    <path
+                        d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z">
+                    </path>
+                </svg>
+            </a>
+            <a href="http://www.instagram.com/" target="_blank" aria-label="Instagram">
+                <svg class="icon" viewBox="0 0 24 24">
+                    <path
+                        d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z">
+                    </path>
+                </svg>
+            </a>
+            <a href="http://www.youtube.com/" target="_blank" aria-label="YouTube">
+                <svg class="icon" viewBox="0 0 24 24">
+                    <path
+                        d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z">
+                    </path>
+                </svg>
+            </a>
         </div>
+
+        <!-- Enlaces de Políticas -->
+        <div class="policy-links">
+            <ul>
+                <li><a href="/terms-of-use">Terms of use</a></li>
+                <li><a href="/privacy-policy">Privacy policy</a></li>
+                <li><a href="/cookies-policy">Cookies policy</a></li>
+                <li><a href="/accessibility">Accessibility</a></li>
+                <li><a href="/sustainability/ethics-and-compliance/speaking-openly#misconduct">Speaking openly/Raising
+                        concerns</a></li>
+                <li><a href="/.rest/api/v1/documents/static/30c5e6f3-a66e-44b9-a842-45e43885e26a/GLEN_2023-Modern-Slavery-Statement.pdf"
+                        target="_blank">Modern Slavery Statement</a></li>
+            </ul>
+        </div>
+
+        <!-- Derechos de Autor -->
         <div class="copyright">
-            © ROC'S Servicios Mineros 2025. Todos los derechos reservados.
+            © Rocs 2025
         </div>
     </footer>
 
