control files and text justify

--- a/extraction/index.html
+++ b/extraction/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soluciones de Extracción y Producción Minera | ROC'S</title>
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="/css/css.css"> -->
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/extraction.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -16,7 +15,7 @@
 <header>
     <div class="header-container">
         <div class="logo">
-            <a href="/index.html">
+            <a href="/">
                 <img src="/img/Logo.png" alt="Logo">
             </a>
         </div>
@@ -26,11 +25,11 @@
         </button>
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/extractionproduction.html" class="active">Extracción</a></li>
-                <li><a href="/procesamiento.html">Procesamiento de Minerales</a></li>
-                <li><a href="/logistic.html">Logística y Transporte</a></li>
-                <li><a href="/minerals.html">Comercialización y Venta de Minerales</a></li>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/extraction" class="active">Extracción</a></li>
+                <li><a href="/prosecution">Procesamiento de Minerales</a></li>
+                <li><a href="/logistic">Logística y Transporte</a></li>
+                <li><a href="/minerals">Comercialización y Venta de Minerales</a></li>
             </ul>
         </nav>
     </div>
@@ -40,7 +39,7 @@
     <section class="hero hero-extraction">
         <div class="hero-content">
             <h1>Soluciones de Extracción y Producción Minera</h1>
-            <p>Tecnología de vanguardia y experiencia confiable para optimizar sus operaciones</p>
+            <p style="text-align: center;">Tecnología de vanguardia y experiencia confiable para optimizar sus operaciones</p>
         </div>
     </section>
 
@@ -49,7 +48,7 @@
         <section class="about-section">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Optimice su producción con nuestras soluciones integrales</h2>
+                    <h2 style="text-align: center;">Optimice su producción con nuestras soluciones integrales</h2>
                     <p>En <strong>ROC'S Servicios Mineros</strong>, ofrecemos servicios especializados de extracción y
                         producción minera que maximizan el rendimiento y minimizan los costos operativos. Con más de 10
                         años de experiencia en la industria, hemos desarrollado metodologías innovadoras que garantizan
@@ -260,23 +259,23 @@
         <section class="certifications-section">
             <div class="container">
                 <h2>Nuestras Certificaciones</h2>
-                <p>Cumplimos con los más altos estándares de la industria</p>
+                <p style="text-align: center;">Cumplimos con los más altos estándares de la industria</p>
                 <div class="certifications-grid">
                     <div class="certification-item">
                         <img src="/img/logos/iso9001.svg" alt="ISO 9001">
-                        <p>ISO 9001</p>
+                        <p style="text-align: center;">ISO 9001</p>
                     </div>
                     <div class="certification-item">
                         <img src="/img/logos/iso14001.png" alt="ISO 14001">
-                        <p>ISO 14001</p>
+                        <p style="text-align: center;">ISO 14001</p>
                     </div>
                     <div class="certification-item">
                         <img src="/img/logos/ISO-45001.png" alt="ISO 45001">
-                        <p>ISO 45001</p>
+                        <p style="text-align: center;">ISO 45001</p>
                     </div>
                     <div class="certification-item">
                         <img src="/img/logos/irma.webp" alt="Certificación Industria Minera">
-                        <p>Certificación Industria Minera</p>
+                        <p style="text-align: center;">Certificación Industria Minera</p>
                     </div>
                 </div>
             </div>
