--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROC'S Servicios Mineros</title>
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="/css/css.css"> -->
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -220,7 +219,7 @@
                             Soluciones avanzadas para maximizar el rendimiento y optimizar la productividad en sus
                             operaciones de extracción minera.
                         </p>
-                        <a href="/extractionproduction.html" class="text-link">
+                        <a href="/extraction" class="text-link">
                             Más información
                             <img src="/img/assets/arrow-right-icon.png" alt="Flecha">
                         </a>
@@ -239,7 +238,7 @@
                             Tecnologías de vanguardia para la transformación eficiente de minerales, mejorando la
                             rentabilidad de su cadena de valor.
                         </p>
-                        <a href="/procesamiento.html" class="text-link">
+                        <a href="/prosecution/" class="text-link">
                             Más información
                             <img src="/img/assets/arrow-right-icon.png" alt="Flecha">
                         </a>
@@ -258,7 +257,7 @@
                             Sistemas integrados de logística especializada para el sector minero, garantizando
                             eficiencia y seguridad en toda la cadena.
                         </p>
-                        <a href="/logistic.html" class="text-link">
+                        <a href="/logistic" class="text-link">
                             Más información
                             <img src="/img/assets/arrow-right-icon.png" alt="Flecha">
                         </a>
@@ -277,7 +276,7 @@
                             Acceso a mercados globales y asesoramiento estratégico para optimizar el valor comercial de
                             sus productos minerales.
                         </p>
-                        <a href="/minerals.html" class="text-link">
+                        <a href="/minerals" class="text-link">
                             Más información
                             <img src="/img/assets/arrow-right-icon.png" alt="Flecha">
                         </a>
@@ -504,7 +503,7 @@
             <div class="section-header">
                 <div class="section-label">Contacto</div>
                 <h2 class="section-title">¿Listo para optimizar sus operaciones?</h2>
-                <p class="section-text">
+                <p class="section-text" style="text-align: center;">
                     Nuestro equipo de expertos está preparado para analizar sus necesidades y ofrecerle la mejor
                     solución para su proyecto minero.
                 </p>
