--- a/logistic/index.html
+++ b/logistic/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soluciones Logísticas - ROC'S Servicios Mineros</title>
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="/css/css.css"> -->
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/logistics.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -16,7 +15,7 @@
 <header>
     <div class="header-container">
         <div class="logo">
-            <a href="/index.html">
+            <a href="/">
                 <img src="/img/Logo.png" alt="Logo">
             </a>
         </div>
@@ -26,11 +25,11 @@
         </button>
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/extractionproduction.html">Extracción</a></li>
-                <li><a href="/procesamiento.html">Procesamiento de Minerales</a></li>
-                <li><a href="/logistic.html" class="active">Logística y Transporte</a></li>
-                <li><a href="/minerals.html">Comercialización y Venta de Minerales</a></li>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/extraction">Extracción</a></li>
+                <li><a href="/prosecution">Procesamiento de Minerales</a></li>
+                <li><a href="/logistic" class="active">Logística y Transporte</a></li>
+                <li><a href="/minerals">Comercialización y Venta de Minerales</a></li>
             </ul>
         </nav>
     </div>
@@ -40,7 +39,7 @@
     <section class="hero hero-logistic">
         <div class="hero-content">
             <h1>SOLUCIONES LOGÍSTICAS INTEGRALES</h1>
-            <p>OPTIMIZAMOS SU CADENA DE SUMINISTRO MINERO</p>
+            <p style="text-align: center;">OPTIMIZAMOS SU CADENA DE SUMINISTRO MINERO</p>
         </div>
     </section>
 
@@ -48,7 +47,7 @@
     <section class="about-section">
         <div class="about-content">
             <div class="about-text">
-                <h2>Transformamos desafíos logísticos en ventajas competitivas</h2>
+                <h2 style="text-align: center;">Transformamos desafíos logísticos en ventajas competitivas</h2>
                 <p>En <strong>ROC'S Servicios Mineros</strong>, no solo transportamos minerales; diseñamos soluciones
                     logísticas que maximizan su eficiencia operativa y reducen costos. Nuestro enfoque personalizado
                     asegura que cada tonelada de material llegue a su destino en tiempo óptimo, manteniendo la
@@ -313,7 +312,7 @@
     <section style="background-color: #ffcc00; padding: 60px 20px; text-align: center; color: #333;">
         <div style="max-width: 800px; margin: 0 auto;">
             <h2 style="font-size: 36px; margin-bottom: 20px;">OPTIMICE SU LOGÍSTICA MINERA HOY</h2>
-            <p style="font-size: 18px; margin-bottom: 30px;">Nuestros expertos están listos para diseñar una solución a
+            <p style="text-align: center;font-size: 18px; margin-bottom: 30px;">Nuestros expertos están listos para diseñar una solución a
                 medida para sus necesidades específicas.</p>
             <a href="#contact"
                 style="display: inline-block; background-color: #333; color: #fff; padding: 15px 30px; border-radius: 5px; font-weight: bold; text-transform: uppercase; transition: background-color 0.3s ease;">Solicitar
@@ -327,7 +326,7 @@
             <div class="section-header">
                 <div class="section-label">Contacto</div>
                 <h2 class="section-title">¿Listo para optimizar sus operaciones?</h2>
-                <p class="section-text">
+                <p class="section-text" style="text-align: center;">
                     Nuestro equipo de expertos está preparado para analizar sus necesidades y ofrecerle la mejor
                     solución para su proyecto minero.
                 </p>
