--- a/prosecution/index.html
+++ b/prosecution/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Procesamiento de Minerales | ROC'S Servicios Mineros</title>
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="/css/css.css"> -->
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/prosessing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -17,7 +16,7 @@
 <header>
     <div class="header-container">
         <div class="logo">
-            <a href="/index.html">
+            <a href="/">
                 <img src="/img/Logo.png" alt="ROC'S Servicios Mineros">
             </a>
         </div>
@@ -26,11 +25,11 @@
         </button>
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/extractionproduction.html">Extracción</a></li>
-                <li><a href="/procesamiento.html" class="active">Procesamiento de Minerales</a></li>
-                <li><a href="/logistic.html">Logística y Transporte</a></li>
-                <li><a href="/minerals.html">Comercialización y Venta de Minerales</a></li>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/extraction">Extracción</a></li>
+                <li><a href="/prosecution" class="active">Procesamiento de Minerales</a></li>
+                <li><a href="/logistic">Logística y Transporte</a></li>
+                <li><a href="/minerals">Comercialización y Venta de Minerales</a></li>
             </ul>
         </nav>
     </div>
@@ -40,14 +39,14 @@
     <section class="hero hero-process">
         <div class="hero-content">
             <h1>Soluciones de Procesamiento de Minerales</h1>
-            <p>Optimizamos sus operaciones con tecnología de vanguardia y expertise técnico</p>
+            <p style="text-align: center;">Optimizamos sus operaciones con tecnología de vanguardia y expertise técnico</p>
         </div>
     </section>
 
     <section class="about-section">
         <div class="about-content">
             <div class="about-text">
-                <h2>Potenciando el valor de sus recursos minerales</h2>
+                <h2 style="text-align: center;">Potenciando el valor de sus recursos minerales</h2>
                 <p>En <strong>ROC'S Servicios Mineros</strong>, transformamos el material extraído en productos de alto
                     valor mediante soluciones personalizadas de procesamiento mineral que mejoran la eficiencia
                     operativa, reducen costos y maximizan la recuperación de minerales valiosos.</p>
@@ -60,7 +59,7 @@
 
     <section class="about-content">
         <div class="about-text">
-            <h2>Nuestros Servicios de Procesamiento</h2>
+            <h2 style="text-align: center;">Nuestros Servicios de Procesamiento</h2>
             <p>Ofrecemos soluciones integrales que abarcan todo el ciclo de procesamiento mineral, desde la trituración
                 inicial hasta la obtención del producto final comercializable:</p>
         </div>
@@ -155,8 +154,8 @@
     <section class="about-section" style="background-color: #fff;">
         <div class="about-content">
             <div class="about-text">
-                <h2>Tecnología de Vanguardia a su Servicio</h2>
-                <p>Integramos las últimas innovaciones tecnológicas para maximizar el rendimiento de sus operaciones de
+                <h2 style="text-align: center;">Tecnología de Vanguardia a su Servicio</h2>
+                <p style="text-align: center;">Integramos las últimas innovaciones tecnológicas para maximizar el rendimiento de sus operaciones de
                     procesamiento:</p>
             </div>
         </div>
@@ -201,7 +200,7 @@
     <section class="about-section">
         <div class="about-content">
             <div class="about-text">
-                <h2>Compromiso con la Sostenibilidad</h2>
+                <h2 style="text-align: center;">Compromiso con la Sostenibilidad</h2>
                 <p>En ROC'S, la responsabilidad ambiental es parte integral de nuestras soluciones de procesamiento:</p>
                 <ul>
                     <li><strong>Reducción del consumo hídrico:</strong> Implementamos sistemas de recirculación y
@@ -224,7 +223,7 @@
     <section class="cta-section">
         <div class="cta-container">
             <h2>Transforme sus operaciones de procesamiento</h2>
-            <p>Permítanos ayudarle a maximizar la recuperación de minerales y reducir costos operativos con nuestras
+            <p style="text-align: center;">Permítanos ayudarle a maximizar la recuperación de minerales y reducir costos operativos con nuestras
                 soluciones personalizadas.</p>
             <a href="/index.html#contact" class="cta-button">Solicite una consulta</a>
         </div>
