--- a/minerals/index.html
+++ b/minerals/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Minerales | ROC'S Servicios Mineros</title>
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="/css/css.css"> -->
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/minerals.css">
 </head>
@@ -14,7 +13,7 @@
 <header>
     <div class="header-container">
         <div class="logo">
-            <a href="/index.html">
+            <a href="/">
                 <img src="/img/Logo.png" alt="ROC'S Servicios Mineros">
             </a>
         </div>
@@ -23,11 +22,11 @@
         </button>
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/extractionproduction.html">Extracción</a></li>
-                <li><a href="/procesamiento.html">Procesamiento de Minerales</a></li>
-                <li><a href="/logistic.html">Logística y Transporte</a></li>
-                <li><a href="/minerals.html" class="active">Comercialización y Venta de Minerales</a></li>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/extraction">Extracción</a></li>
+                <li><a href="/prosecution">Procesamiento de Minerales</a></li>
+                <li><a href="/logistic">Logística y Transporte</a></li>
+                <li><a href="/minerals" class="active">Comercialización y Venta de Minerales</a></li>
             </ul>
         </nav>
     </div>
@@ -37,7 +36,7 @@
     <section class="hero hero-mineral">
         <div class="hero-content">
             <h1>Soluciones Minerales Premium</h1>
-            <p>Calidad excepcional que impulsa resultados en diversas industrias</p>
+            <p style="text-align: center;">Calidad excepcional que impulsa resultados en diversas industrias</p>
         </div>
     </section>
 
