--- a/extraction/index.html
+++ b/extraction/index.html
@@ -350,6 +350,7 @@
     <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20servicios" class="whatsapp-button">
         <img src="/img/social/whats.png" alt="WhatsApp">
     </a>
+    <script src="/js/scroll-animations.js"></script>
     <script src="/js/navbar.js"></script>
 
 
