--- a/prosecution/index.html
+++ b/prosecution/index.html
@@ -298,6 +298,8 @@
         <img src="/img/social/whats.png" alt="WhatsApp">
     </a>    
     <script src="/js/navbar.js"></script>
+    <script src="/js/scroll-animations.js"></script>
+    
 </body>
 
 </html>
