--- a/logistic/index.html
+++ b/logistic/index.html
@@ -516,6 +516,8 @@
     </footer>
 
     <script src="/js/navbar.js"></script>
+    <script src="/js/scroll-animations.js"></script>
+
 </body>
 
 </html>
